Fix ScrollBar color on light theme

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,7 +25,7 @@ li:hover .folder-item-action {
 }
 
 .simplebar-scrollbar:before {
-  background: #d8dee9 !important;
+  background: #b48ead !important;
 }
 
 @media (max-width: 1280px) {
